    On the Oracle side, CLOB or VARCHAR2 can be used.
    Suggested by "bsislow".
  - Add support and documentation for building with Microsoft Visual Studio.
    Patch by Christian Ullrich.
  - Enable delayed loading of the Oracle DLL on Windows.
    This allows better diagnostic messages if the library cannot be loaded.
    Patch by Christian Ullrich.

  Bugfixes:
  - Missing check if Oracle data types can be converted to PostgreSQL types.
    This bug was introduced in 2.0.0.
  - When oracle_fdw is loaded, initializing background workers
    (e.g. for parallel query) failed with:
       ERROR:  invalid cache ID: 41
  - Don't try to push down IS [NOT] DISTINCT FROM expressions.
    Oracle does not support this standard SQL syntax.

Version 2.0.0, released 2017-09-15
  Incompatible changes:
  - Remove the deprecated option "plan_costs", since it is not very useful and
    is a maintenance burden.  After an upgrade, tables with this option set
    should be updated with:
    ALTER FOREIGN TABLE ... OPTIONS (DROP plan_costs);

  Enhancements:
  - Push down 2-way inner joins in SELECT statements if all conditions
    can be pushed down.
    Patch by Tatsuro Yamada, courtesy of NTT OSS Center.

  Bugfixes:
  - oracle_fdw crashed on Windows if queries use a NULL parameter or
    an empty subselect.
    Report by PAscal Lemoy.
  - Reading "srid.map" sometimes caused errors even if everything was alright.
    Report by Paul Dziemiela, analysis by Christian Ullrich.
  - Don't push down expressions with CLOB column references.
    Because of Oracle's inability to use CLOB in SQL expressions,
    this could lead to errors like
       ORA-00932: inconsistent datatypes: expected - got CLOB
  - Fix bug in "pg_terminate_backend" handling.
    "pg_terminate_backend" (or SIGTERM) was not handled
    correctly, since neither the Oracle query was canceled nor did
    the backend terminate.
    Reported by Dmitry Chirkin.

Version 1.5.0, released 2016-08-05
  Enhancements: