@@ -156,7 +156,12 @@ typedef enum
 	FDW_UNABLE_TO_CREATE_EXECUTION,
 	FDW_TABLE_NOT_FOUND,
 	FDW_OUT_OF_MEMORY,
-	FDW_SERIALIZATION_FAILURE
+	FDW_SERIALIZATION_FAILURE,
+	FDW_UNIQUE_VIOLATION,
+	FDW_DEADLOCK_DETECTED,
+	FDW_NOT_NULL_VIOLATION,
+	FDW_CHECK_VIOLATION,
+	FDW_FOREIGN_KEY_VIOLATION
 } oraError;
 
 /* encapsulates an Oracle geometry object */
